	syntax = "proto3";

package auth;

service Auth {
    rpc Authenticate(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
    string username = 1; // UsersÂ´s useranme
    string password = 2; // Users's password
}

message AuthResponse {
    string token = 1; // JWT token
}

