syntax = "proto3";

package service;

service AuthN {
    rpc Authenticate(AuthNRequest) returns (AuthNResponse) {}
    rpc Verify(VerifyRequest) returns (VerifyResponse) {}
}

message AuthNRequest {
    string username = 1;
    string password = 2;
}

message AuthNResponse {
    string token = 1; // Auth token, cookie, JWT ...
}

message VerifyRequest {
	string token = 1;
}

message VerifyResponse {
	Identity identity = 1;
}

message Identity {
	string username = 1;
	string email = 2;
	string display_name = 3;
}

